fix missing padding in empty and loading message

--- a/packages/browser-extension/src/modules/ui/styles/popup-window.css
+++ b/packages/browser-extension/src/modules/ui/styles/popup-window.css
@@ -93,6 +93,10 @@ body {
   text-decoration: underline;
 }
 
+.work-item--message {
+  padding-inline: 4px;
+}
+
 .work-item__placeholder {
   height: 40px;
 }
